--- a/weeklyChallenge/week3/problem.tex
+++ b/weeklyChallenge/week3/problem.tex
@@ -6,7 +6,7 @@
 \usepackage{hhline}
 \usepackage{amsmath}
 \setlength{\droptitle}{-5em}
-\title{\textbf{Problem of the Week \#2}}
+\title{\textbf{Problem of the Week \#3}}
 \author{C. Hayson, L. Khanh}
 \usepackage[left=0.7in, right=0.7in, top=1in, bottom=1in]{geometry}
 \usepackage{enumitem}
@@ -14,7 +14,7 @@
 \begin{document}
 \maketitle
 \section*{Restaurant order}
-You are a manager for a small Italian restaurant and need to take in order from customer. However, math is not your strong point, and under the pressure of working, you just can't write down the item and calculate the bill fast enough, and customer are growing impatient!!! You decide to write a program to calculate the bill for you based on the item ordered. The food that your restaurant make and their price (excluding 15\% tax) is in the table below:
+You are a manager for a small Italian restaurant and need to take in orders from customers. However, you are not really good at math, and under the pressure of working, you can't write down the item and calculate the bill fast enough, but the customers are growing impatient!!! You decide to write a program to calculate the bill for you based on the item ordered. The food that your restaurant makes and their price (excluding 15\% tax) are in the table below:
 
 \begin{table}[h!]
     \centering
@@ -33,8 +33,8 @@ You are a manager for a small Italian restaurant and need to take in order from 
 \end{table}
 
 \begin{enumerate}[label=(\alph*)]
-    \item \textbf{Beginner} Using a loop and a dictionary, ask the user for all of their order by inputting the name of the food as written in the menu, inputting a 0 to indicate end of order. Output their total bill afterward, and don't forget the 15\% tax. If the customer inputted an item that your restaurant doesn't make, output an error message but do not terminate the program, the customer wouldn't like having to input the whole order again would they?
-    \item \textbf{Intermediate} Your restaurant is expanding and you want to add some drink to the menu; juice, soda, beer, wine and the like. But you are a law abiding person, you can't sell alcohol to minor! Add a check for age before each order (you trust that your customer will not lie about their age) and if a minor try to order alcohol, display a warning message. The new drink to be added is as below:
+    \item \textbf{Beginner} Using a loop and a dictionary, ask the user for all of their order by inputting the name of the food as written in the menu and inputting a 0 to indicate the end of the order. Output their total bill afterward, and don't forget the 15\% tax. If the customer inputs an item that your restaurant doesn't make, output an error message but do not terminate the program, the customer wouldn't like having to input the whole order again, would they?
+    \item \textbf{Intermediate} Your restaurant is expanding and you want to add some drink to the menu; juice, soda, beer, wine, and the like. But you are a law-abiding person, you can't sell alcohol to minors! Add a check for age before each order (you trust your customer will not lie about their age) (if the age is strictly less than 19, than block the purchase) and if a minor tries to order alcohol, display a warning message. The new drink to be added is as follows:
     \begin{table}[h!]
         \centering
         \begin{tabular}{c|c}
@@ -44,12 +44,12 @@ You are a manager for a small Italian restaurant and need to take in order from 
             Juice & \$3.99 \\
             Soda & \$2.49 \\
             Beer & \$4.99 \\
-            Red wine & \$9.99 \\
-            White wine & \$11.99
+            Red Wine & \$11.99 \\
+            White Wine & \$9.99
         \end{tabular}
     \end{table}
     
-    \item \textbf{Advance} Your restaurant has expanded to a dizzying size, and now you can't even remember the order as they come in anymore, there's just too many of them! Add a function in your program to print out the customer's order.
+    \item \textbf{Advanced} Your restaurant has expanded to a dizzying size, and now you can't even remember the order as they come in anymore, there are just too many of them! Add a function in your program to print out the customer's order.
 \end{enumerate}
 
 
